--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "jquery": "^2.2.2",
     "reset-css": "^2.2.0",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "jquery.inputmask": "^3.3.4",
+    "fancybox": "^3.0.47"
   }
 }
